# CppChat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  server.cpp
src/Channel/: CMakeLists.txt  channel.hpp
src/ScreenState/: CMakeLists.txt  ScreenState.hpp
tests/: CMakeLists.txt  channelTests.cpp
